--- a/app/views/battles/stream.html.erb
+++ b/app/views/battles/stream.html.erb
@@ -14,7 +14,7 @@
   <div class="container">
     <div class="col-md-12 text-center">
       <div class="col-md-6">
-        <div id="brand1_count" class="col-md-10 well" data-battle_id="<%= @battle.id %>">
+        <div id="brand1_count" class="col-md-10 well" data-battle-id="<%= @battle.id %>">
           <%= render partial: "brand1_count", :locals => {:id => @battle.id} %>
         </div>
         <br>
